Adding pagination filter ability to import row retrieval
